[project]
name = "health-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "asyncio-mqtt>=0.16.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "chainlit>=2.6.0",
    "datetime>=5.5",
    "fastapi>=0.115.14",
    "flake8>=7.3.0",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mypy>=1.17.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.95.1",
    "openai-agents>=0.1.0",
    "pandas>=2.3.1",
    "pdfkit>=1.0.0",
    "plotly>=6.2.0",
    "plotly-express>=0.4.1",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.2",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
    "fpdf2",
    "matplotlib>=3.10.3",
]
